@@ -14,7 +14,9 @@ And you can also join the Steam Group chat, if you want to find updates on your 
 when I launch an update, or to join the group chat:
 https://steamcommunity.com/groups/Nakano15-Modding
 
-If you are curious about how the mod works, you can check its github.
+If you are curious about how the mod works, or want to use its functions, you can check its github.
+You can use tModLoader to extract the mod dll to use it for script references (on the mods list, 
+click the question mark, then ask it to extract).
 As for contribution, better reach me first:
 https://github.com/nakano15/nterrautils
 
